--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
       "latest"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/samit4me/babel-plugin-filenamespace.git"
+  },
   "author": "Samuel Sharpe",
   "license": "MIT",
   "devDependencies": {
