--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "babel-plugin-filenamespace",
   "version": "0.0.2",
   "description": "Babel plugin to generate a namespace based on filename",
-  "main": "lib/index.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "cross-env NODE_ENV=production babel src --out-dir lib",
+    "compile": "cross-env NODE_ENV=production babel src --out-dir build",
     "prepublish": "npm run compile"
   },
   "babel": {
