--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "babel-plugin-filenamespace",
   "version": "0.0.2",
   "description": "Babel plugin to generate a namespace based on filename",
-  "main": "build/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "cross-env NODE_ENV=production babel src --out-dir build",
+    "test": "jest",
+    "compile": "cross-env NODE_ENV=production babel src --out-dir lib --ignore spec.js,test.js",
     "prepublish": "npm run compile"
   },
   "babel": {
@@ -21,12 +21,14 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
     "babel-preset-latest": "^6.14.0",
     "cross-env": "^2.0.1",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.2"
+    "eslint-plugin-react": "^6.2.2",
+    "jest-cli": "^15.1.1"
   }
 }
