--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Babel plugin to generate a namespace based on filename",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run compile && jest",
+    "test": "npm run prepublish && jest",
+    "clean": "rimraf lib dist es coverage",
     "compile": "cross-env NODE_ENV=production babel src --out-dir lib --ignore spec.js,test.js",
-    "prepublish": "npm run compile"
+    "prepublish": "npm run clean && npm run compile"
   },
   "babel": {
     "presets": [
@@ -41,6 +42,7 @@
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.2.2",
-    "jest-cli": "^15.1.1"
+    "jest-cli": "^15.1.1",
+    "rimraf": "^2.5.4"
   }
 }
