--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "author": "Samuel Sharpe",
   "license": "MIT",
   "jest": {
-    "scriptPreprocessor": "./node_modules/babel-jest",
     "testEnvironment": "node",
     "collectCoverage": true,
     "coverageThreshold": {
@@ -32,6 +31,7 @@
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-jest": "^15.0.0",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-latest": "^6.14.0",
     "cross-env": "^2.0.1",
     "eslint": "^3.5.0",
