--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npm run prepublish && jest",
     "clean": "rimraf lib coverage",
     "compile": "cross-env NODE_ENV=production babel src --out-dir lib --ignore spec.js,test.js",
-    "prepublish": "npm run clean && npm run compile"
+    "prepublish": "npm run clean && npm run compile",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "babel-jest": "^15.0.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-latest": "^6.14.0",
+    "coveralls": "^2.11.14",
     "cross-env": "^2.0.1",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
