--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "npm run prepublish && jest",
     "clean": "rimraf lib coverage",
-    "compile": "cross-env NODE_ENV=production babel src --out-dir lib --ignore spec.js,test.js",
-    "prepublish": "npm run clean && npm run compile",
+    "build": "cross-env NODE_ENV=production babel src --out-dir lib --ignore spec.js,test.js",
+    "prepublish": "npm run clean && npm run build",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
