--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,19 +8,24 @@ environment:
     - nodejs_version: "4.x"
 
 # Fix line endings in Windows. (runs before repo cloning)
-# init:
-#   - git config --global core.autocrlf input
+init:
+  - git config --global core.autocrlf input
+  
+# Install scripts--runs after repo cloning
+install:
+  - npm -g install npm
+  - npm install
 
-# # Disable automatic builds
-# build: off
+# Disable automatic builds
+build: off
 
-# # Custom scripts instead of automatic tests
-# test_script:
-#   # Output debugging info
-#   - node --version
-#   - npm --version
-#   # run build and run tests
-#   - npm run test
+# Custom scripts instead of automatic tests
+test_script:
+  # Output debugging info
+  - node --version
+  - npm --version
+  # run build and run tests
+  - npm run test
 
 
 build:
