--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,4 @@ test_script:
   - node --version
   - npm --version
   # run build and run tests
-  - npm run test
-
-
-build:
-  verbosity: minimal
+  - npm run test_script
