--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Babel plugin to generate a namespace based on filename",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run prepublish && jest",
-    "clean": "rimraf lib coverage",
     "build": "cross-env NODE_ENV=production babel src --out-dir lib --ignore spec.js,test.js",
+    "clean": "rimraf lib coverage",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepublish": "npm run clean && npm run build",
-    "coveralls": "cat ./coverage/lcov.info | coveralls"
+    "lint": "eslint . --ignore-path .gitignore --ignore-pattern testFixtures",
+    "test": "npm run prepublish && npm run lint && jest"
   },
   "repository": {
     "type": "git",
