--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-filenamespace",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Babel plugin to generate a namespace based on filename",
   "main": "lib/index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepublish": "npm run clean && npm run build",
     "lint": "eslint . --ignore-path .gitignore --ignore-pattern testFixtures",
-    "test": "npm run prepublish && npm run lint && jest"
+    "test": "npm run prepublish && npm run lint && jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -43,18 +43,18 @@
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
-    "babel-core": "6.18.2",
-    "babel-jest": "17.0.2",
-    "babel-polyfill": "6.16.0",
+    "babel-core": "6.21.0",
+    "babel-jest": "18.0.0",
+    "babel-polyfill": "6.20.0",
     "babel-preset-latest": "6.16.0",
     "coveralls": "2.11.15",
     "cross-env": "3.1.3",
-    "eslint": "3.11.0",
+    "eslint": "3.12.2",
     "eslint-config-airbnb": "13.0.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.7.1",
-    "jest-cli": "17.0.3",
+    "eslint-plugin-react": "6.8.0",
+    "jest-cli": "18.0.0",
     "rimraf": "2.5.4"
   }
 }
