--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-filenamespace",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Babel plugin to generate a namespace based on filename",
   "main": "lib/index.js",
   "scripts": {
@@ -42,19 +42,19 @@
     }
   },
   "devDependencies": {
-    "babel-cli": "6.22.2",
-    "babel-core": "6.22.1",
-    "babel-jest": "18.0.0",
-    "babel-polyfill": "6.22.0",
-    "babel-preset-latest": "6.22.0",
-    "coveralls": "2.11.15",
-    "cross-env": "3.1.4",
-    "eslint": "3.15.0",
-    "eslint-config-airbnb": "14.0.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "3.0.2",
-    "eslint-plugin-react": "6.9.0",
-    "jest-cli": "18.1.0",
-    "rimraf": "2.5.4"
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-jest": "21.2.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.0",
+    "coveralls": "3.0.0",
+    "cross-env": "5.1.0",
+    "eslint": "4.9.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
+    "jest-cli": "21.2.1",
+    "rimraf": "2.6.2"
   }
 }
