--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "babel-preset-env": "1.6.0",
     "coveralls": "3.0.0",
     "cross-env": "5.1.0",
-    "eslint": "4.9.0",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0",
+    "eslint": "^5.7.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "jest-cli": "21.2.1",
     "rimraf": "2.6.2"
   }
