--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,11 @@
 version: 1.0.{build}
 
 # Test against these versions of Node.js
-# it seems that appveyor only has 4.4.7 tho
 environment:
   matrix:
-    - nodejs_version: "4.x"
+    - nodejs_version: "6"
+    - nodejs_version: "8"
+    - nodejs_version: "10"
 
 # Fix line endings in Windows. (runs before repo cloning)
 init:
