--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.0",
     "coveralls": "3.0.0",
-    "cross-env": "5.1.0",
+    "cross-env": "^5.2.0",
     "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
