--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "babel-jest": "21.2.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.0",
-    "coveralls": "3.0.0",
+    "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
