--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     }
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-jest": "21.2.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.6.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "eslint": "^5.7.0",
@@ -54,7 +54,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "jest-cli": "21.2.1",
-    "rimraf": "2.6.2"
+    "jest-cli": "^23.6.0",
+    "rimraf": "^2.6.2"
   }
 }
