Allow multiple custom placeholders
- Add `customPlaceholders` option to allow for
multiple/custom placeholders.
- Add `dropExtensions` option to allow file extensions to be dropped
(e.g. file.test.js >> file).
- Update README to reflect new options.
- Update tests.

--- a/package.json
+++ b/package.json
@@ -16,22 +16,32 @@
     "url": "https://github.com/samit4me/babel-plugin-filenamespace.git"
   },
   "keywords": [
+    "action types",
+    "babel",
+    "babel-plugin",
+    "ddd",
+    "domain driven design",
+    "module",
     "namespace",
     "namespacing",
     "redux",
-    "action",
+    "storybook",
+    "test",
     "type",
-    "module",
-    "babel",
-    "babel-plugin",
     "filename",
     "dirname"
   ],
   "author": "Samuel Sharpe",
   "license": "MIT",
   "jest": {
+    "testMatch": [
+      "<rootDir>/src/**/*.test.[tj]s?(x)"
+    ],
     "testEnvironment": "node",
     "collectCoverage": true,
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/src/"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 80,
