--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,9 @@ init:
   
 # Install scripts--runs after repo cloning
 install:
-  - npm -g install npm
+  # Get the latest stable version of Node.js or io.js
+  - ps: Install-Product node $env:nodejs_version
+  # install modules
   - npm install
 
 # Disable automatic builds
