Use airbnb/base eslint so react eslint is not required.
eslint-react and jsx where only installed because of eslint-airbnb but react is not used`

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "extends": "airbnb",
+    "extends": "airbnb/base",
     "env": {
       "browser": true,
       "node": true,
@@ -10,8 +10,6 @@
       "__filenamespace": false
     },
     "plugins": [
-        "react",
-        "jsx-a11y",
         "import"
     ]
 }
